# adyela

./: .env.example  .gitignore  .gitleaks.toml  .prettierignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STRATEGY.md  EXECUTE_NOW.sh  FINAL_QUALITY_REPORT.md  GCP_SETUP_QUICKSTART.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_PLAN.md  LOCAL_SETUP.md  MCP_GITHUB_SETUP.md  MICROSERVICES_AUDIT.md  MICROSERVICES_CICD_COMPLETE_GUIDE.md  MICROSERVICES_DEPLOYMENT_STATUS.md  Makefile  QUALITY_EXECUTION_REPORT.md  README.md  SECURITY.md  TASK_13.1_SUMMARY.md  TASK_13.3_COMPLETION_REPORT.md  TASK_13.5_COMPLETION_REPORT.md  TASK_14.1_COMPLETION_REPORT.md  TASK_14.1_EXECUTION_RESULTS.md  TASK_14.2_COMPLETION_REPORT.md  TASK_14.3_COMPLETION_REPORT.md  TASK_14.4_COMPLETION_REPORT.md  UNIFIED_DOMAIN_IMPLEMENTATION_GUIDE.md  WORKFLOWS_VALIDATION.md  commitlint.config.js  docker-compose.dev.yml  firebase.json  firestore-rules-staging.rules  firestore.indexes.json  firestore.rules  monitoring-policy.json  (+6 more)
.claude/: mcp-config.json
apps/api/: .dockerignore  .env.example  .gitignore  .trivyignore  Dockerfile  README.md  mypy.ini  pyproject.toml
apps/api-admin/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api-admin/adyela_api_admin/: __init__.py  main.py
apps/api-admin/adyela_api_admin/application/ports/: __init__.py  repositories.py
apps/api-admin/adyela_api_admin/config/: __init__.py  constants.py  settings.py
apps/api-admin/adyela_api_admin/domain/: exceptions.py
apps/api-admin/adyela_api_admin/domain/entities/: __init__.py  audit_log.py  professional.py  tenant.py
apps/api-admin/adyela_api_admin/infrastructure/repositories/: __init__.py  firestore_audit_log_repository.py  firestore_professional_repository.py  firestore_tenant_repository.py
apps/api-admin/adyela_api_admin/presentation/: dependencies.py
apps/api-admin/tests/: __init__.py  conftest.py
apps/api-admin/tests/unit/: test_approve_use_case.py  test_create_tenant_use_case.py  test_professional_entity.py  test_tenant_entity.py
apps/api-analytics/: Dockerfile  README.md  pyproject.toml
apps/api-analytics/adyela_api_analytics/: main.py
apps/api-analytics/adyela_api_analytics/application/ports/: __init__.py
apps/api-analytics/adyela_api_analytics/application/use_cases/: get_dashboard_metrics.py  track_event.py
apps/api-analytics/adyela_api_analytics/config/: __init__.py
apps/api-analytics/adyela_api_analytics/domain/entities/: __init__.py
apps/api-analytics/adyela_api_analytics/domain/exceptions/: __init__.py
apps/api-analytics/adyela_api_analytics/infrastructure/bigquery/: client.py
apps/api-analytics/adyela_api_analytics/infrastructure/repositories/: firestore_event_repository.py
apps/api-analytics/tests/unit/: test_get_dashboard_metrics_use_case.py  test_track_event_use_case.py
apps/api-appointments/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api-appointments/adyela_api_appointments/: __init__.py  main.py
apps/api-appointments/adyela_api_appointments/application/ports/: __init__.py  repositories.py  services.py
apps/api-appointments/adyela_api_appointments/application/use_cases/: __init__.py
apps/api-appointments/adyela_api_appointments/config/: __init__.py  constants.py  settings.py
apps/api-appointments/adyela_api_appointments/domain/: exceptions.py
apps/api-appointments/adyela_api_appointments/domain/entities/: __init__.py  appointment.py
apps/api-appointments/adyela_api_appointments/domain/value_objects/: __init__.py  date_time_range.py  tenant_id.py
apps/api-appointments/adyela_api_appointments/infrastructure/: __init__.py
apps/api-appointments/adyela_api_appointments/infrastructure/pubsub/: __init__.py  event_publisher.py
apps/api-appointments/adyela_api_appointments/infrastructure/repositories/: __init__.py  firestore_appointment_repository.py
apps/api-appointments/adyela_api_appointments/presentation/: __init__.py  dependencies.py
apps/api-appointments/tests/: __init__.py  conftest.py
apps/api-appointments/tests/unit/: test_appointment_entity.py  test_appointment_use_cases.py  test_create_appointment_use_case.py  test_date_time_range.py  test_event_publisher.py
apps/api-auth/: Dockerfile  README.md  pyproject.toml
apps/api-auth/adyela_api_auth/: __init__.py  main.py
apps/api-auth/adyela_api_auth/application/ports/: __init__.py
apps/api-auth/adyela_api_auth/application/use_cases/: __init__.py  login_user.py  oauth_login.py  refresh_token.py  register_user.py  validate_token.py
apps/api-auth/adyela_api_auth/config/: settings.py
apps/api-auth/adyela_api_auth/domain/entities/: user.py
apps/api-auth/adyela_api_auth/domain/interfaces/: __init__.py  auth_service.py  token_service.py  user_repository.py
apps/api-auth/adyela_api_auth/infrastructure/auth_providers/: firebase_auth_service.py
apps/api-auth/adyela_api_auth/infrastructure/repositories/: firestore_user_repository.py
apps/api-auth/adyela_api_auth/infrastructure/security/: jwt_token_service.py
apps/api-auth/adyela_api_auth/presentation/api/: router.py
apps/api-auth/adyela_api_auth/presentation/middleware/: correlation_id.py  logging_middleware.py
apps/api-auth/adyela_api_auth/presentation/schemas/: auth.py
apps/api-auth/tests/: conftest.py
apps/api-auth/tests/unit/: __init__.py  test_jwt_token_service.py  test_login_user_use_case.py  test_register_user_use_case.py  test_validate_and_refresh_token.py
apps/api/adyela_api/: __init__.py  main.py
apps/api/adyela_api/application/: __init__.py
apps/api/adyela_api/application/ports/: __init__.py  repositories.py  services.py
apps/api/adyela_api/config/: __init__.py  constants.py  settings.py
apps/api/adyela_api/domain/: __init__.py  exceptions.py
apps/api/adyela_api/domain/entities/: __init__.py  appointment.py  patient.py  practitioner.py  tenant.py
apps/api/adyela_api/domain/value_objects/: __init__.py
apps/api/adyela_api/infrastructure/: __init__.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_health.py
apps/api/tests/unit/: test_oauth_sync.py
(+508 files in other folders)
